fix logo text letterspacing

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -7,7 +7,7 @@
     vertical-align: middle;
     // font-size: 1.65rem;
     font-size: $font-xl;  
-    letter-spacing: 0.325rem;
+    // letter-spacing: 0.325rem;
     // color: $veryLightBrown;
     color: $wood;
     font-family: 'Oswald', sans-serif;
